[gd_scene load_steps=105 format=2]

[ext_resource path="res://Image/Menu/ConnexionScreenDisplay.png" type="Texture" id=1]
[ext_resource path="res://Script/Menu/ConnectionScreen.gd" type="Script" id=2]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_011.png" type="Texture" id=3]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_001.png" type="Texture" id=4]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_009.png" type="Texture" id=5]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_007.png" type="Texture" id=6]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_015.png" type="Texture" id=7]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_003.png" type="Texture" id=8]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_010.png" type="Texture" id=9]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_016.png" type="Texture" id=10]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_014.png" type="Texture" id=11]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_004.png" type="Texture" id=12]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_000.png" type="Texture" id=13]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_008.png" type="Texture" id=14]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_012.png" type="Texture" id=15]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_017.png" type="Texture" id=16]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_005.png" type="Texture" id=17]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_002.png" type="Texture" id=18]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_006.png" type="Texture" id=19]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_013.png" type="Texture" id=20]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_016.png" type="Texture" id=21]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_009.png" type="Texture" id=22]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_008.png" type="Texture" id=23]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_017.png" type="Texture" id=24]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_006.png" type="Texture" id=25]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_010.png" type="Texture" id=26]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_001.png" type="Texture" id=27]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_003.png" type="Texture" id=28]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_013.png" type="Texture" id=29]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_000.png" type="Texture" id=30]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_004.png" type="Texture" id=31]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_016.png" type="Texture" id=32]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_018.png" type="Texture" id=33]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_019.png" type="Texture" id=34]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_006.png" type="Texture" id=35]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_005.png" type="Texture" id=36]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_009.png" type="Texture" id=37]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_000.png" type="Texture" id=38]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_015.png" type="Texture" id=39]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_011.png" type="Texture" id=40]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_020.png" type="Texture" id=41]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_021.png" type="Texture" id=42]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_002.png" type="Texture" id=43]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_007.png" type="Texture" id=44]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_008.png" type="Texture" id=45]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_012.png" type="Texture" id=46]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_011.png" type="Texture" id=47]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_014.png" type="Texture" id=48]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_017.png" type="Texture" id=49]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_022.png" type="Texture" id=50]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_004.png" type="Texture" id=51]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_002.png" type="Texture" id=52]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_001.png" type="Texture" id=53]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_003.png" type="Texture" id=54]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_005.png" type="Texture" id=55]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_007.png" type="Texture" id=56]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_010.png" type="Texture" id=57]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_012.png" type="Texture" id=58]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_013.png" type="Texture" id=59]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_014.png" type="Texture" id=60]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_015.png" type="Texture" id=61]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_035.png" type="Texture" id=62]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_039.png" type="Texture" id=63]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_042.png" type="Texture" id=64]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_055.png" type="Texture" id=65]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_052.png" type="Texture" id=66]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_056.png" type="Texture" id=67]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_026.png" type="Texture" id=68]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_032.png" type="Texture" id=69]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_058.png" type="Texture" id=70]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_051.png" type="Texture" id=71]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_047.png" type="Texture" id=72]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_029.png" type="Texture" id=73]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_034.png" type="Texture" id=74]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_036.png" type="Texture" id=75]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_028.png" type="Texture" id=76]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_050.png" type="Texture" id=77]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_059.png" type="Texture" id=78]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_023.png" type="Texture" id=79]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_030.png" type="Texture" id=80]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_033.png" type="Texture" id=81]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_040.png" type="Texture" id=82]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_027.png" type="Texture" id=83]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_041.png" type="Texture" id=84]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_031.png" type="Texture" id=85]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_046.png" type="Texture" id=86]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_024.png" type="Texture" id=87]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_044.png" type="Texture" id=88]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_043.png" type="Texture" id=89]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_045.png" type="Texture" id=90]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_048.png" type="Texture" id=91]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_037.png" type="Texture" id=92]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_049.png" type="Texture" id=93]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_053.png" type="Texture" id=94]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_054.png" type="Texture" id=95]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_025.png" type="Texture" id=96]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_057.png" type="Texture" id=97]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_038.png" type="Texture" id=98]
[ext_resource path="res://Font/new_dynamicfont_arial.tres" type="DynamicFont" id=99]
[ext_resource path="res://Font/Forgotten.ttf" type="DynamicFontData" id=100]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 38 ), ExtResource( 53 ), ExtResource( 52 ), ExtResource( 54 ), ExtResource( 51 ), ExtResource( 55 ), ExtResource( 25 ), ExtResource( 56 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 57 ), ExtResource( 40 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 21 ), ExtResource( 24 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 50 ), ExtResource( 79 ), ExtResource( 87 ), ExtResource( 96 ), ExtResource( 68 ), ExtResource( 83 ), ExtResource( 76 ), ExtResource( 73 ), ExtResource( 80 ), ExtResource( 85 ), ExtResource( 69 ), ExtResource( 81 ), ExtResource( 74 ), ExtResource( 62 ), ExtResource( 75 ), ExtResource( 92 ), ExtResource( 98 ), ExtResource( 63 ), ExtResource( 82 ), ExtResource( 84 ), ExtResource( 64 ), ExtResource( 89 ), ExtResource( 88 ), ExtResource( 90 ), ExtResource( 86 ), ExtResource( 72 ), ExtResource( 91 ), ExtResource( 93 ), ExtResource( 77 ), ExtResource( 71 ), ExtResource( 66 ), ExtResource( 94 ), ExtResource( 95 ), ExtResource( 65 ), ExtResource( 67 ), ExtResource( 97 ), ExtResource( 70 ), ExtResource( 78 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 30 ), ExtResource( 27 ), ExtResource( 43 ), ExtResource( 28 ), ExtResource( 31 ), ExtResource( 36 ), ExtResource( 35 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 37 ), ExtResource( 26 ), ExtResource( 47 ), ExtResource( 46 ), ExtResource( 29 ), ExtResource( 48 ), ExtResource( 39 ), ExtResource( 32 ), ExtResource( 49 ) ],
"loop": false,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 4 ), ExtResource( 18 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 6 ), ExtResource( 14 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 3 ), ExtResource( 15 ), ExtResource( 20 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 16 ) ],
"loop": false,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="DynamicFont" id=4]
size = 100
font_data = ExtResource( 100 )

[node name="ConnectionScreen" type="Control"]
script = ExtResource( 2 )

[node name="PlayButtonAnimated" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="ButtonAnimatedParticule" type="AnimatedSprite" parent="PlayButtonAnimated"]
position = Vector2( 982, 798.5 )
scale = Vector2( 2, 2 )
frames = SubResource( 3 )

[node name="ButtonAnimatedRight" type="AnimatedSprite" parent="PlayButtonAnimated"]
position = Vector2( 1081, 803.5 )
scale = Vector2( 2.1, 2.1 )
frames = SubResource( 1 )

[node name="ButtonAnimatedLeft" type="AnimatedSprite" parent="PlayButtonAnimated"]
position = Vector2( 877, 791 )
scale = Vector2( 2.1, 2.1 )
frames = SubResource( 2 )

[node name="Playlabel" type="Label" parent="PlayButtonAnimated"]
margin_left = 826.0
margin_top = 738.0
margin_right = 1137.0
margin_bottom = 854.0
custom_fonts/font = SubResource( 4 )
text = "JOUER"
align = 1
valign = 1

[node name="PlayButton" type="Button" parent="PlayButtonAnimated"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 810.0
margin_top = 728.0
margin_right = 1165.0
margin_bottom = 866.0

[node name="ConnectionScreenDisplay" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="ConnectionSession" type="Control" parent="ConnectionScreenDisplay"]
margin_left = 437.0
margin_top = 544.0
margin_right = 982.0
margin_bottom = 904.0

[node name="EmailText" type="LineEdit" parent="ConnectionScreenDisplay/ConnectionSession"]
margin_left = 63.0
margin_top = 119.0
margin_right = 492.0
margin_bottom = 153.0
custom_fonts/font = ExtResource( 99 )
caret_blink = true
caret_blink_speed = 0.5

[node name="PasswordText" type="LineEdit" parent="ConnectionScreenDisplay/ConnectionSession"]
margin_left = 63.0
margin_top = 212.0
margin_right = 491.0
margin_bottom = 248.0
custom_fonts/font = ExtResource( 99 )
secret = true
caret_blink = true
caret_blink_speed = 0.5

[node name="ErreurTextConnection" type="RichTextLabel" parent="ConnectionScreenDisplay/ConnectionSession"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 59.0
margin_top = 259.0
margin_right = 494.0
margin_bottom = 290.0
custom_fonts/mono_font = ExtResource( 99 )
custom_fonts/normal_font = ExtResource( 99 )

[node name="LoginButton" type="Button" parent="ConnectionScreenDisplay/ConnectionSession"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 202.0
margin_top = 288.0
margin_right = 356.0
margin_bottom = 347.0

[node name="RegisterSession" type="Control" parent="ConnectionScreenDisplay"]
margin_left = 980.0
margin_top = 544.0
margin_right = 1530.0
margin_bottom = 902.0

[node name="UsernameText" type="LineEdit" parent="ConnectionScreenDisplay/RegisterSession"]
margin_left = 152.0
margin_top = 80.0
margin_right = 531.0
margin_bottom = 113.0
custom_fonts/font = ExtResource( 99 )
caret_blink = true
caret_blink_speed = 0.5

[node name="EmailText" type="LineEdit" parent="ConnectionScreenDisplay/RegisterSession"]
margin_left = 152.0
margin_top = 144.0
margin_right = 530.0
margin_bottom = 177.0
custom_fonts/font = ExtResource( 99 )
caret_blink = true
caret_blink_speed = 0.5

[node name="PasswordText" type="LineEdit" parent="ConnectionScreenDisplay/RegisterSession"]
margin_left = 228.0
margin_top = 208.0
margin_right = 532.0
margin_bottom = 243.0
custom_fonts/font = ExtResource( 99 )
secret = true
caret_blink = true
caret_blink_speed = 0.5

[node name="ErreurTextRegister" type="RichTextLabel" parent="ConnectionScreenDisplay/RegisterSession"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 59.0
margin_top = 256.0
margin_right = 494.0
margin_bottom = 287.0
custom_fonts/mono_font = ExtResource( 99 )
custom_fonts/normal_font = ExtResource( 99 )

[node name="RegisterButton" type="Button" parent="ConnectionScreenDisplay/RegisterSession"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 375.0
margin_top = 286.0
margin_right = 538.0
margin_bottom = 347.0

[connection signal="mouse_entered" from="PlayButtonAnimated/PlayButton" to="." method="_on_PlayButton_mouse_entered"]
[connection signal="mouse_exited" from="PlayButtonAnimated/PlayButton" to="." method="_on_PlayButton_mouse_exited"]
[connection signal="pressed" from="PlayButtonAnimated/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="ConnectionScreenDisplay/ConnectionSession/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="ConnectionScreenDisplay/RegisterSession/RegisterButton" to="." method="_on_RegisterButton_pressed"]
